Partly done report power problem UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ android {
                             //For purchase history layout files
                             'src/main/res/layouts/my_purchase_history_fragment_layouts',
 
+                            //For report power layout files
+                            'src/main/res/layouts/report_power_fragment_layouts',
+
                             'src/main/res/layouts/',
                             'src/main/res/'
                     ]
@@ -71,7 +74,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     //For motion layout
-    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha5'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta1'
 
     //Support library to support drawer layout's navigation view
     implementation 'com.android.support:design:28.0.0'
