--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HomeActivity"></activity>
+        <activity android:name=".ui.home.HomeActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".ui.signup.SignUpActivity" />
         <activity android:name=".ui.login.LogInActivity" />
         <activity android:name=".MainActivity">
