--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -71,6 +72,12 @@ android {
                             //For settings layout files
                             'src/main/res/layouts/settings_fragment_layouts',
 
+                            //For custom dialog layout files
+                            'src/main/res/layouts/custom_dialog_layouts/custom_dialog_wait_layouts',
+
+                            //For settings layout files
+                            'src/main/res/layouts/custom_dialog_layouts/custom_dialog_fail_layouts',
+
                             'src/main/res/layouts/',
                             'src/main/res/'
                     ]
@@ -89,8 +96,15 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'com.android.support:support-v4:28.0.0'
+
+    //For firebase
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
